--- a/css/stile.css
+++ b/css/stile.css
@@ -144,7 +144,7 @@
 .form {
   font-family: "Montserrat", sans-serif;
   font-size: 13px;
-  color: #bbb;
+  color: #313131;
   font-weight: bold;
   margin: 17px auto;
   text-transform: uppercase;
@@ -152,7 +152,16 @@
   width: 455px;
   height: 50px;
   border-radius: 5px;
+  background-color: none;
 }
+
+.form:valid {
+  background: #dfd;
+}
+.form:invalid {
+  background: #fdd;
+}
+
 .message {
   height: 210px;
   margin: 20px auto;
